# commentlint

./: .editorconfig  .gitignore  Makefile  flake.nix  pyproject.toml
commentlint/: __main__.py
