[tool.poetry]
name = "commentlint"
version = "0.1.0"
description = "Check the comments"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pygments = "^2.10.0"
language-tool-python = "^2.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
